@@ -1476,7 +1476,8 @@ int attribute_hidden Rf_AdobeSymbol2ucs2(int n)
     else return 0;
 }
 
-double R_strtod4(const char *str, char **endptr, char dec, Rboolean NA)
+double R_strtod5(const char *str, char **endptr, char dec, 
+		 Rboolean NA, Rboolean exact)
 {
     LDOUBLE ans = 0.0, p10 = 10.0, fac = 1.0;
     int n, expn = 0, sign = 1, ndigits = 0, exph = -1;
@@ -1523,6 +1524,11 @@ double R_strtod4(const char *str, char **endptr, char dec, Rboolean NA)
 	    else break;
 	    if (exph >= 0) exph += 4;
 	}
+	if (exact && ans > 9e15) { // lost accuracy
+	    ans = NA_REAL;
+	    p = str; /* back out */
+	    goto done;
+	}
 	if (*p == 'p' || *p == 'P') {
 	    int expsign = 1;
 	    double p2 = 2.0;
@@ -1552,6 +1558,11 @@ double R_strtod4(const char *str, char **endptr, char dec, Rboolean NA)
 	for (p++; *p >= '0' && *p <= '9'; p++, ndigits++, expn--)
 	    ans = 10*ans + (*p - '0');
     if (ndigits == 0) {
+	ans = NA_REAL;
+	p = str; /* back out */
+	goto done;
+    }
+    if (exact && ans > 9e15) { // lost accuracy
 	ans = NA_REAL;
 	p = str; /* back out */
 	goto done;
@@ -1594,14 +1605,20 @@ done:
     return sign * (double) ans;
 }
 
+
+double R_strtod4(const char *str, char **endptr, char dec, Rboolean NA)
+{
+    return R_strtod5(str, endptr, dec, NA, FALSE);
+}
+
 double R_strtod(const char *str, char **endptr)
 {
-    return R_strtod4(str, endptr, '.', FALSE);
+    return R_strtod5(str, endptr, '.', FALSE, FALSE);
 }
 
 double R_atof(const char *str)
 {
-    return R_strtod4(str, NULL, '.', FALSE);
+    return R_strtod5(str, NULL, '.', FALSE, FALSE);
 }
 
 /* enc2native and enc2utf8, but they are the same in a UTF-8 locale */
